--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "server": "nodemon app.js",
+    "dev": "nodemon app.js",
+    "server": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Argüello Juliián Andrés / Gariglio Sebastian Mariano / Signorini Alessandro Paolo",
