--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-NODE_MONGO_DB=technical_assistant
+NODE_MONGO_DB=intratec
 NODE_MONGO_HOST=localhost
 NODE_MONGO_PORT=27017
 JWT_KEY=463ca1b82b92aa98e76b6720abc5daf122f6e29a
