--- a/frontend/intra-tec/package.json
+++ b/frontend/intra-tec/package.json
@@ -10,11 +10,11 @@
     "bootstrap": "^5.2.0-beta1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
-    "node-sass": "^7.0.1",
+    "node-sass": "^8.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "web-vitals": "^2.1.4",
