--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 NODE_MONGO_DB=intratec
-NODE_MONGO_HOST=localhost
+NODE_MONGO_HOST=mongodb+srv://alesigno:UrnPQFFxeOYdSbE9@intratec.tiovek0.mongodb.net/intratec
 NODE_MONGO_PORT=27017
 JWT_KEY=463ca1b82b92aa98e76b6720abc5daf122f6e29a
 JWT_KEY_RECOVERY=051CE83850723FB35CCF1336901D304981D212FC
